# MLOPS-Demo

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: cloud_run_deploy.yaml
lin_regression_demo/: database.py  frontend.py  lin.ipynb  lin.py  server.py  start.sh
