[tool.poetry]
name = "lin-regression-demo"
version = "0.1.0"
description = ""
authors = ["Kaitlin Brabec <kaitlinbrabec@gmail.com>"]
readme = "README.md"
packages = [{include = "lin_regression_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
nicegui = "^1.2.24"
uvicorn = "0.20.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
